--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Git out of date. Will update soon!
+
+________________________________________-
+
 Animexxenger is based on Beem:
 
 http://www.beem-project.com
