--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Git out of date. Will update soon!
+Git out of date. Changed Mexxenger codebase to Xabber.
+New repo:
+https://github.com/meisterfuu/animexxenger-v2
 
 ________________________________________-
 
